--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "breathe",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -17,7 +18,9 @@
     "react-native-reanimated": "^1.1.0",
     "react-native-sqlite-storage": "^3.3.11",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
