--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-modal": "^11.3.1",
     "react-native-reanimated": "^1.1.0",
     "react-native-sqlite-storage": "^3.3.11",
     "react-native-web": "^0.11.4",
