--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-zoom-viewer": "^2.2.27",
     "react-native-modal": "^11.3.1",
     "react-native-reanimated": "^1.1.0",
     "react-native-sqlite-storage": "^3.3.11",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.1",
+    "react-navigation": "^3.13.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4"
   },
