Fun with Fontsgit add -A

--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
   },
-  "private": true
+  "private": true,
+  "rnpm": {
+    "assets": [
+   "./assets/fonts/"
+    ]
+  }
 }
