--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
       "android",
       "web"
     ],
-    "version": "1.1.0",
+    "version": "1.2.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -25,11 +25,12 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "app.breathe.Breathe",
-      "buildNumber": "1.1.1"
+      "buildNumber": "1.2.0"
     },
     "android": {
       "package": "com.breathe.Breathe",
-      "versionCode": 1
+      "versionCode": 2,
+      "permissions": []
     }
   }
 }
