--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "alpha-scroll-flat-list": "^0.2.20",
     "expo": "^34.0.1",
     "expo-constants": "^6.0.0",
     "node": "^12.8.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-contacts": "^5.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-zoom-viewer": "^2.2.27",
     "react-native-modal": "^11.3.1",
