Fix config issue

--- a/package.json
+++ b/package.json
@@ -32,10 +32,5 @@
   "devDependencies": {
     "babel-preset-expo": "^8.0.0"
   },
-  "private": true,
-  "rnpm": {
-    "assets": [
-      "./assets/fonts/"
-    ]
-  }
+  "private": true
 }
