updates and fixes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "breathe",
-  "main": "node_modules/expo/AppEntry.js",
+  "version": "2.0.0",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,25 +10,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "alpha-scroll-flat-list": "^0.2.20",
-    "expo": "^36.0.0",
-    "expo-constants": "~8.0.0",
-    "node": "^12.8.1",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
-    "react-native-contacts": "^5.1.0",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-image-zoom-viewer": "^2.2.27",
-    "react-native-modal": "^11.3.1",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-responsive-fontsize": "^0.4.3",
-    "react-native-responsive-screen": "^1.4.0",
-    "react-native-sqlite-storage": "^3.3.11",
-    "react-native-web": "^0.11.7",
-    "react-navigation": "^3.13.0",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.4"
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "expo": "^48.0.10",
+    "expo-constants": "~14.2.1",
+    "node": "^19.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.6",
+    "react-native-contacts": "^7.0.5",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-web": "~0.18.10",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.0.0"
