--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
       "android",
       "web"
     ],
-    "version": "1.3.0",
+    "version": "2.0.9",
     "orientation": "portrait",
     "icon": "./assets/icon2.png",
     "splash": {
@@ -17,7 +17,8 @@
       "backgroundColor": "#ffffff"
     },
     "updates": {
-      "fallbackToCacheTimeout": 0
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/b27012e5-23f4-49d4-8497-4263c0d9d84e"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -25,12 +26,27 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "app.breathe.Breathe",
-      "buildNumber": "1"
+      "buildNumber": "2.0.9",
+      "runtimeVersion": {
+        "policy": "sdkVersion"
+      }
     },
     "android": {
       "package": "com.breathe.Breathe",
       "versionCode": 5,
-      "permissions": []
-    }
+      "permissions": [],
+      "runtimeVersion": {
+        "policy": "sdkVersion"
+      }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "b27012e5-23f4-49d4-8497-4263c0d9d84e"
+      }
+    },
+    "jsEngine": "hermes"
+  },
+  "scripts": {
+    "postinstall": "patch-package"
   }
 }
