--- a/package.json
+++ b/package.json
@@ -1,37 +1,47 @@
 {
   "name": "breathe",
-  "version": "2.0.0",
+  "version": "2.0.3",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "expo": "^48.0.10",
+    "babel-preset-expo": "^9.3.0",
+    "expo": "~48.0.10",
     "expo-constants": "~14.2.1",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "node": "^19.8.1",
+    "patch-package": "^6.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-contacts": "^7.0.5",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-web": "~0.18.10",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   },
   "devDependencies": {
-    "babel-preset-expo": "^8.0.0"
+    "@babel/core": "^7.20.0",
+    "babel-preset-expo": "^9.3.0"
   },
   "private": true
 }
